change font size in menu to fix better on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -315,6 +315,7 @@ footer h2 {
     }
 
     .nav-menu li{
+        font-size: 20px;
         margin-left: 15px;
     }
 
